--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       "Robert Maldonado",
       "Tianqi Pan",
       "Will Grover",
-      "Yiting Li"
+      "Yiting Li",
       "Leonardo"
     ];
 
